web speech api implementada

--- a/02-formacao-aplicacao-web-javascript/04-validacao-reconhecimento-voz/index.html
+++ b/02-formacao-aplicacao-web-javascript/04-validacao-reconhecimento-voz/index.html
@@ -20,6 +20,9 @@
         <div>O número secreto é maior <i class="fa-solid fa-up-long"></i></div>
     </div>
 
+    <button data-btn>Iniciar</button>
+
     <script src="app/sortearNumero.js"></script>
+    <script src="app/speech.js"></script>
 </body>
 </html>
